# rust-fullstack

./: 2  README.md
client/: 2  README.md  package-lock.json  package.json  process.d.ts  typings.d.ts
client/app/: AddModal.tsx  AllMovies.tsx  Footer.tsx  InitialMovies.tsx  Nav.tsx  actions.tsx  adminPage.tsx  head.tsx  layout.tsx  loading.tsx  page.tsx  session.tsx  user.tsx
client/app/about/: page.tsx
client/app/components/: AddModal.tsx  Posters.tsx  addmodal.tsx  deletebutton.tsx  poster.tsx  toast.tsx  youtube.tsx
client/app/movies/: MoivesList.tsx  page.tsx
client/app/movies/[movieid]/: page.tsx
client/app/movies/[movietitle]/: MovieClient.tsx  layout.tsx  page.tsx
client/app/team/: page.tsx
client/components/: AddModal.tsx  Posters.tsx  YouTube.tsx  deleteButton.tsx
client/lib/: MovieData.ts
client/pages/: index.tsx
client/pages/api/: admin.ts  jwt.ts  revalidate.ts
client/pages/api/auth/: [...nextauth].ts
client/pages/components/: nav.tsx
client/src/components/: Movies.astro  Nav.astro  allmovies.tsx
client/src/layouts/: Layout.astro
client/src/pages/: index.astro
server/: .env.example  .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml
server/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
server/migrations/2023-01-05-230211_movies/: up.sql
server/migrations/2023-05-14-213839_create_movies/: up.sql
server/src/: actions.rs  db.rs  main.rs  models.rs  schema.rs
server/src/controllers/: routes.rs
