[package]
name = "actix_diesel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
anyhow = "1.0.68"
diesel = {version = "2.0.0", features =  ["postgres","r2d2"]}
dotenvy = "0.15.6"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"]}
